--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,9 @@
     "angular-messages": "1.5.2",
     "angular-material": "1.1.0",
     "angular-aria": "1.5.2",
-    "angular-animate": "1.5.2"
+    "angular-animate": "1.5.2",
+    "angular-file-saver": "^1.1.3",
+    "ng-file-upload": "^12.2.13"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
