--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "angular-aria": "1.5.2",
     "angular-animate": "1.5.2",
     "angular-file-saver": "^1.1.3",
-    "ng-file-upload": "^12.2.13"
+    "ng-file-upload": "^12.2.13",
+    "animate.css": "^3.5.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
