--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "angular-animate": "1.5.2",
     "angular-file-saver": "^1.1.3",
     "ng-file-upload": "^12.2.13",
-    "animate.css": "^3.5.2"
+    "animate.css": "^3.5.2",
+    "angular-material-data-table": "^0.10.10"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
