--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "angular-aria": "1.5.2",
     "angular-animate": "1.5.2",
     "angular-file-saver": "^1.1.3",
+    "angular-local-storage":"^0.7.1",
     "ng-file-upload": "^12.2.13",
     "animate.css": "^3.5.2",
     "angular-material-data-table": "^0.10.10"
