--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lusca": "^1.3.0",
     "method-override": "^2.3.5",
     "morgan": "~1.7.0",
+    "optipng-bin": "^4.0.0",
     "serve-favicon": "^2.3.0",
     "toastr": "^2.1.4"
   },
